add Meyiah .env for ezy update

--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
 PORT=80
 
-C_ID=bbf65f4885be41138e8369efb630f04b
-C_SECRET=ZCHdqUuyNqroVPo7vTdvF8dVLUghrVzZSQ6oFVze
-CALLBACK=http://localhost/callback/
+C_ID=f0cb9fdd39964a47abaecd72c5912de4
+C_SECRET=NFlMk9ipvIReIKWiFTzUUpjP8OktYDJX28EKly5K
+CALLBACK=http://51.38.179.126/callback/
 
 DB_NAME=ENDO
 DB_PORT=27017
