--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
   "author": "Dracks",
   "license": "ISC",
   "dependencies": {
+    "connect-redis": "^3.3.3",
     "dotenv": "^6.0.0",
     "ejs": "^2.6.1",
     "eve-sso-simple": "^2.0.1",
     "express": "^4.16.3",
     "express-session": "^1.15.6",
-    "mongodb": "^3.0.10"
+    "mongodb": "^3.0.10",
+    "node-schedule": "^1.3.0"
   }
 }
